[project]
name = "code-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "langchain",
    "langchain-community",
    "langchain-chroma",
    "langchain-ollama",
    "unstructured",
    "ollama",
    "pypdf",
]
