# In pyproject.toml

[project]
name = "code-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "langchain",
    "langchain-community",
    "langchain-chroma",
    "langchain-ollama",
    "langchain-unstructured",
    "langgraph",
    "ollama",
    "pathspec",
    # This line installs the Windows-specific package with bundled binaries
    "python-magic-bin; sys_platform == 'win32'",
    # This line installs the standard package for other systems (Linux, macOS)
    "python-magic; sys_platform != 'win32'",
    # For full document parsing capabilities
    "unstructured[pdf,md]",
]